# cdcommons

./: .clang-format  CHANGELOG.md  CMakeLists.txt  vcpkg.json
.github/workflows/: ci.yml  scorecard.yml
include/cdcommons/: cdcommons.hpp
include/cdcommons/time/: decimal.hpp  detail.hpp  mbfp.hpp  rational.hpp  rsfp.hpp
test/: CMakeLists.txt  smoke_test.cpp
test/time/: decimal_test.cpp  mbfp_test.cpp  rational_test.cpp  rsfp_test.cpp
