add_executable(cdcommons_smoke_test smoke_test.cpp)
target_link_libraries(cdcommons_smoke_test PRIVATE cdcommons Catch2::Catch2WithMain)
add_test(NAME cdcommons_smoke_test COMMAND cdcommons_smoke_test)

add_executable(cdcommons_rational_test time/rational_test.cpp)
target_link_libraries(cdcommons_rational_test PRIVATE cdcommons Catch2::Catch2WithMain)
add_test(NAME cdcommons_rational_test COMMAND cdcommons_rational_test)

add_executable(cdcommons_mbfp_test time/mbfp_test.cpp)
target_link_libraries(cdcommons_mbfp_test PRIVATE cdcommons Catch2::Catch2WithMain)
add_test(NAME cdcommons_mbfp_test COMMAND cdcommons_mbfp_test)
